--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "description": "A journal to store and manage Bible study notes.",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#ffffff",
+  "background_color": "#e9ecef",
+  "theme_color": "#e9ecef",
   "icons": [
     {
       "src": "/images/icon-192x192.png",
